--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,7 +1,29 @@
-<header>
+<header class="site-header">
   <h1>{{judul}}</h1>
-
-  <a href="/">Home</a>
-  <a href="/About">About</a>
-  <a href="/bantuan">Bantuan</a>
+  <nav class="navbar">
+    <a href="/">
+      <img
+        src="https://cdn-icons-png.flaticon.com/128/25/25694.png"
+        alt="Home"
+        class="nav-icon"
+      />
+      Home
+    </a>
+    <a href="/about">
+      <img
+        src="https://cdn-icons-png.flaticon.com/128/1/1176.png"
+        alt="About"
+        class="nav-icon"
+      />
+      About
+    </a>
+    <a href="/bantuan">
+      <img
+        src="https://cdn-icons-png.flaticon.com/128/12598/12598157.png"
+        alt="Bantuan"
+        class="nav-icon"
+      />
+      Bantuan
+    </a>
+  </nav>
 </header>
