--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,4 +1,4 @@
-<footer>
+<footer class="site-footer">
   <div class="footer-content">
     <p>Dikembangkan oleh <strong>{{nama}}</strong></p>
     <div class="social-icons">
@@ -7,21 +7,27 @@
         target="_blank"
         aria-label="GitHub"
       >
-        <img src="/img/github-icon.png" alt="GitHub" />
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/733/733553.png"
+          alt="GitHub"
+        />
       </a>
       <a
         href="https://linkedin.com/in/zakihatta"
         target="_blank"
         aria-label="LinkedIn"
       >
-        <img src="/img/linkedin-icon.png" alt="LinkedIn" />
+        <img src="/img/linkedin.png" alt="LinkedIn" />
       </a>
       <a
         href="https://twitter.com/zakihatta"
         target="_blank"
         aria-label="Twitter"
       >
-        <img src="/img/twitter-icon.png" alt="Twitter" />
+        <img
+          src="https://cdn-icons-png.flaticon.com/128/5968/5968830.png"
+          alt="Twitter"
+        />
       </a>
     </div>
     <p>&copy; {{tahun}} All Rights Reserved.</p>
