--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,29 +1,27 @@
 <header class="site-header">
-  <h1>{{judul}}</h1>
-  <nav class="navbar">
-    <a href="/">
-      <img
-        src="https://cdn-icons-png.flaticon.com/128/25/25694.png"
-        alt="Home"
-        class="nav-icon"
-      />
-      Home
-    </a>
-    <a href="/about">
-      <img
-        src="https://cdn-icons-png.flaticon.com/128/1/1176.png"
-        alt="About"
-        class="nav-icon"
-      />
-      About
-    </a>
-    <a href="/bantuan">
-      <img
-        src="https://cdn-icons-png.flaticon.com/128/12598/12598157.png"
-        alt="Bantuan"
-        class="nav-icon"
-      />
-      Bantuan
-    </a>
-  </nav>
+  <div class="header_top-row">
+    <div class="header_logo">
+      <img src="/img/line.svg" alt="logo-line" class="header_logo--line" />
+      <h1>{{judul}}</h1>
+    </div>
+
+    <nav class="navbar">
+      <a href="/">
+        <img src="/img/nav_home.svg" alt="Home" class="nav-icon" />
+        Home
+      </a>
+      <a href="/about">
+        <img src="/img/nav_about.svg" alt="About" class="nav-icon" />
+        About
+      </a>
+      <a href="/bantuan">
+        <img src="/img/nav_help.svg" alt="Bantuan" class="nav-icon" />
+        Bantuan
+      </a>
+      <a href="/berita">
+        <img src="/img/nav_berita.svg" alt="Berita" class="nav-icon" />
+        Berita
+      </a>
+    </nav>
+  </div>
 </header>
