--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,25 @@
+:root {
+  /* ------Color variables------ */
+  --pink_300: #f93fc1;
+  --pink_900: #6f066d;
+  --purple_300: #de66dc;
+  --purple_400: #b338b1;
+  --purple_400_01: #8c37ab;
+  --purple_a100: #d08aff;
+  --purple_a200_a8: #d83bf7a8;
+  --purple_a400: #cf00ba;
+  --purple_a400_01: #ff12c3;
+  --white_a700_51: #ffffff51;
+  --white_a700_68: #ffffff68;
+  --white_a700_99: #ffffff99;
+
+  --space-xs: 8px;
+  --space-sm: 14px;
+
+  --radius-xs: 4px;
+  --radius-sm: 44px;
+}
+
 /* Body Styling */
 body {
   font-family: "Poppins", sans-serif;
@@ -7,19 +29,33 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url("/img/bg.jpg"); /* Path ke gambar background */
+  background-image: url("/img/default.jpg"); /* Path ke gambar background */
   background-size: cover; /* Agar gambar menutupi seluruh layar */
   background-position: center; /* Pusatkan gambar */
   background-repeat: no-repeat; /* Hindari pengulangan gambar */
   height: 100vh;
 }
 
-/* Container untuk tata letak keseluruhan */
 .container {
-  max-width: 800px;
+  min-height: 100vh;
+  gap: 128px;
+  background-image: url(/img/default.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
   width: 100%;
-  margin: auto;
-  background-color: white;
+  flex-direction: column;
+  @media only screen and (max-width: 1050px) {
+    height: auto;
+    gap: 106px;
+  }
+}
+
+/* Container untuk tata letak keseluruhan */
+.main-container {
+  padding-top: 190px;
+  width: 100%; /* Kontainer mengisi lebar penuh */
+  margin: 0; /* Menghilangkan margin */
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   overflow: hidden;
@@ -31,136 +67,86 @@ body {
   text-align: center;
 }
 
-/* Header and Footer */
-header,
-footer {
-  background-color: #333;
-  color: white;
-  padding: 20px;
-  text-align: center;
+.main-content h1 {
+  color: var(--purple_a400);
+  font-size: 3em;
+  margin-bottom: 0;
 }
 
-footer {
-  font-size: 0.9em;
+.main-content h5 {
+  margin-top: -8px;
+  color: var(--pink_300);
+  font-style: italic;
+  font-size: 20px;
 }
 
-/* Header Styling */
-.site-header {
-  background-color: #2c3e50; /* Warna gelap untuk header */
-  color: white; /* Warna teks */
-  padding: 30px; /* Ruang dalam yang lebih besar */
-  text-align: center; /* Tengah */
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3); /* Bayangan */
-  position: relative; /* Posisi relatif untuk footer */
-}
-
-.site-header h1 {
-  margin: 0; /* Menghilangkan margin */
-  font-size: 3em; /* Ukuran font lebih besar */
-}
-
-.navbar {
+.content_icons {
+  margin-top: 30px;
+  margin: auto;
+  align-self: center;
+  width: 30%;
   display: flex;
-  justify-content: center; /* Posisikan navbar ke tengah */
-  gap: 20px; /* Jarak antar tautan */
-  margin-top: 15px;
+  justify-content: space-between;
+  gap: 3px;
+  @media only screen and (max-width: 1050px) {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
 }
 
-.navbar a {
-  color: #ecf0f1;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 1.2em;
-  display: flex;
-  align-items: center;
-  transition: color 0.3s;
-}
-
-.navbar .nav-icon {
-  width: 24px; /* Ukuran ikon */
-  height: auto;
-  margin-right: 8px; /* Jarak antara ikon dan teks */
-}
-
-.navbar a:hover {
-  color: #4caf50; /* Warna saat hover */
-}
-
-/* Footer Styling */
-.site-footer {
-  background-color: #34495e; /* Warna gelap untuk footer */
-  color: white; /* Warna teks */
-  padding: 30px; /* Ruang dalam yang lebih besar */
-  text-align: center; /* Tengah */
-  position: relative; /* Memungkinkan posisi relatif pada child */
-}
-
-.footer-content {
-  margin: auto; /* Tengah dalam footer */
-}
-
-.footer-content p {
-  font-size: 1em; /* Ukuran font untuk teks footer */
-  margin: 10px 0; /* Jarak antar teks */
-}
-
-.social-icons {
-  margin: 10px 0; /* Jarak antara teks dan ikon sosial */
-}
-
-.social-icons a {
-  margin: 0 15px; /* Jarak antara ikon */
-}
-
-.social-icons img {
-  width: 30px; /* Ukuran ikon yang lebih besar */
-  height: auto; /* Proporsional */
+.main-content p {
+  color: var(--purple_a400_01);
 }
 
 /* Form styling */
 .weather-form {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   gap: 10px;
   margin-top: 20px;
 }
 
 .weather-form input {
+  margin: auto;
   padding: 10px;
   font-size: 1em;
-  border: 2px solid #ccc;
+  border: 2px solid #ff16c5;
   border-radius: 5px;
-  width: 60%;
+  width: 30%;
   transition: border-color 0.3s;
 }
 
 .weather-form input:focus {
-  border-color: #4caf50;
+  border-color: #918192;
   outline: none;
 }
 
 .weather-form button {
+  margin: auto;
   padding: 10px 15px;
-  background-color: #4caf50;
+  background-color: var(--purple_a400);
   color: white;
   border: none;
+  width: 180px;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
 .weather-form button:hover {
-  background-color: #45a049;
+  background-color: var(--purple_300);
 }
 
 /* Styling untuk informasi cuaca */
 .weather-info {
   margin-top: 30px;
-  background-color: #e9f7ef;
   padding: 20px;
-  border-radius: 5px;
-  color: #333;
+  background-color: var(--white_a700_51);
+  border-radius: var(--radius-sm);
+  border: 1px solid var(--white_a700_99);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  color: #333;
 }
 
 .weather-info p {
